--- a/Project1_Phase2/Project1_Phase2/Project1_Phase2.vcxproj.filters
+++ b/Project1_Phase2/Project1_Phase2/Project1_Phase2.vcxproj.filters
@@ -20,10 +20,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="RBTree.h">
+    <ClInclude Include="Node.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Node.h">
+    <ClInclude Include="Tree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
