--- a/Project1_Phase2/Project1_Phase2/Project1_Phase2.vcxproj
+++ b/Project1_Phase2/Project1_Phase2/Project1_Phase2.vcxproj
@@ -146,7 +146,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Node.h" />
-    <ClInclude Include="RBTree.h" />
+    <ClInclude Include="Tree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
