--- a/Project1_Phase2/Project1_Phase2/Project1_Phase2.vcxproj
+++ b/Project1_Phase2/Project1_Phase2/Project1_Phase2.vcxproj
@@ -148,6 +148,9 @@
     <ClInclude Include="Node.h" />
     <ClInclude Include="Tree.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="sampleinput.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
