Still trying to insert...

--- a/Project1_Phase2/Project1_Phase2/Project1_Phase2.vcxproj
+++ b/Project1_Phase2/Project1_Phase2/Project1_Phase2.vcxproj
@@ -150,6 +150,8 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="sampleinput.txt" />
+    <Text Include="testinput.txt" />
+    <Text Include="testoutput.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
