Working on main

--- a/Project2_Phase1/Project2_Phase1/Project2_Phase1.vcxproj
+++ b/Project2_Phase1/Project2_Phase1/Project2_Phase1.vcxproj
@@ -150,6 +150,8 @@
     <Text Include="edges1.txt" />
     <Text Include="edges2.txt" />
     <Text Include="output1.txt" />
+    <Text Include="testcommands.txt" />
+    <Text Include="testedges.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AdjacencyList.h" />
